kubia-gpu.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: kubia
      image: ryanfuentes85/kubia
      ports:
      - containerPort: 8080
        protocol: TCP
