kubia-manual-with-labels.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
    - name: kubia
      image: ryanfuentes85/kubia
      ports:
      - containerPort: 8080
        protocol: TCP
