kubia-manual.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
  - image: ryanfuentes85/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
