kubia-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia
  ports:
  - name: http
    port: 80
    targetPort: my-http-port
  - name: https
    port: 443
    targetPort: my-https-port
